add user classes to test